# backtest

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.hypothesis/constants/: 22050cab91860aa5  2911c93bf625186e  3455f44319f0007a  417ef9608928a86d  748a1cb58a8ef5b1  80c0f035e2af95b8  8b7fda02f8c33002  95cf58d3d8031632  978a2e5467a1781f  986990ae66c485be  a4ff9f637fbd9ae6  a8bdaf6bb8f57a33  aa22c1c33efa80a0  da39a3ee5e6b4b0d  e9150ee1d845e704  ed8062bdbc57501e
alembic/: env.py
alembic/versions/: 0001_create_runs_table.py
data/: sample_prices.csv
infra/docker/: Dockerfile  docker-compose.yml
infra/terraform/aws/: README.md  main.tf  outputs.tf  variables.tf
scripts/: benchmark_backtest.py  export_runs.py
src/quant_backtester/: backtest.py  cli.py  config.py  events.py  logging_utils.py  sweep.py
src/quant_backtester/data/: csv_data_handler.py
src/quant_backtester/execution/: simulated_execution.py
src/quant_backtester/persistence/: db.py  models.py
src/quant_backtester/portfolio/: simple_portfolio.py
src/quant_backtester/strategy/: moving_average.py
src/quant_backtester/utils/: metrics.py
tests/: test_cli_config_file.py  test_config_validation.py  test_csv_data_handler_edge_cases.py  test_execution_partial_fills.py  test_property_portfolio_invariants.py  test_slippage.py  test_smoke_run.py  test_sweep_edge_cases.py
